--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
   <div id="result"></div>
 </div>
+  <button id="tryAgain">Try Again</button>
   <script src="script.js"></script>
 </body>
 </html>
